# nonogram_algorithm

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
nonograms/: 5x5_single_example.txt  tomo_test_out.txt
nonograms/10x10/: 2.txt
nonograms/3x3/: 1.txt  2.txt
nonograms/4x4/: 1.txt  2.txt  3.txt
nonograms/5x5/: 2.txt  3.txt  4.txt  5.txt
nonograms/6x6/: 1.txt  2.txt
nonograms/7x7/: 1.txt  2.txt  3.txt  4.txt  5.txt
nonograms/8x8/: 1.txt  2.txt  3.txt
src/: BruteSolver.cpp  BruteSolver.h  CharBuffer.cpp  CharBuffer.h  DFSSolver.cpp  DFSSolver.h  NonogramGrid.cpp  NonogramGrid.h  TomographySet.cpp  TomographySet.h
test/: test_all.cpp  test_brute_force.cpp  test_dfs.cpp  test_dfs_all.cpp  test_print_buff.cpp  test_tomo_io.cpp  tomo_test_in.txt  tomo_test_out.txt
